--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,3 @@
 body {
-    background-image: url("http://www.slotsumo.com/wp-content/uploads/2015/03/jeopardy_slot_bg.jpg");
+    background-image: url("..\images\qbackground.jpg");
 }
